# empirlab

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  fix_ci.ps1  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: causal.rst  dl.rst  finance.rst  llm.rst  rl.rst  utils.rst
empirlab/: __init__.py
empirlab/causal/: __init__.py  causal_forest.py  datasets.py  dml.py  dr_learner.py  high_dim_iv.py  synthetic_did.py
empirlab/dl/: __init__.py  lstm.py  tft.py  trainer.py
empirlab/finance/: __init__.py  data_loaders.py  factor_model.py  portfolio.py  return_pred.py
empirlab/llm/: __init__.py  annotator.py  data_clean.py  rag.py  sentiment.py
empirlab/rl/: __init__.py
empirlab/rl/agents/: ppo_agent.py  sac_agent.py
empirlab/rl/envs/: portfolio_env.py  stock_env.py
empirlab/utils/: __init__.py  data_io.py  inference.py  metrics.py  viz.py
notebooks/causal/: C01_DoubleML_PLR.ipynb  C02_CausalForest_HTE.ipynb  C03_SyntheticDiD.ipynb  C04_PostLassoIV.ipynb
notebooks/dl/: DL01_ResNet_ImageClassification.ipynb  DL02_Transformer_AttentionIsAllYouNeed.ipynb  DL_TEMPLATE.ipynb
notebooks/finance/: F01_MLFactorModel.ipynb  F02_ReturnPrediction.ipynb
notebooks/llm/: L01_FinBERT_Sentiment.ipynb  L02_RAG_LitReview.ipynb
notebooks/rl/: RL01_PPO_Portfolio.ipynb
pytest-cache-files-3ypepjka/v/cache/: nodeids
tests/: test_causal.py  test_causal_v2.py  test_dl.py  test_finance.py  test_rl.py  test_utils.py
