[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "empirlab"
version = "0.2.0"
description = "Causal ML, Deep Learning, RL and LLMs for Economics & Finance Research"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "mofs0"}]
requires-python = ">=3.9"
keywords = [
    "causal-inference", "double-machine-learning", "causal-forest",
    "synthetic-did", "instrumental-variables", "dr-learner",
    "econometrics", "finance", "treatment-effects", "llm"
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
causal  = ["econml>=0.14", "doubleml>=0.7"]
finance = ["akshare>=1.10", "yfinance>=0.2", "pandas-datareader>=0.10"]
dl      = ["torch>=2.0", "pytorch-lightning>=2.0"]
rl      = ["gymnasium>=0.29", "stable-baselines3>=2.0"]
llm     = ["openai>=1.0", "transformers>=4.35", "langchain>=0.1", "faiss-cpu>=1.7"]
full    = [
    "empirlab[causal,finance,dl,rl,llm]",
]
dev     = [
    "pytest>=7.0", "pytest-cov>=4.0",
    "black>=23.0", "ruff>=0.1",
    "nbformat>=5.9",
]

[project.urls]
Homepage   = "https://github.com/mofs0/empirlab"
Repository = "https://github.com/mofs0/empirlab"
Issues     = "https://github.com/mofs0/empirlab/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["empirlab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]
